--- a/main.html
+++ b/main.html
@@ -60,15 +60,19 @@
       </div>
       <div class="inside-income-info-box">
         <span class="main-page-content-name">Income</span>
-        <span id="getIncome">Nil</span>
+        <span id="getIncome"></span>
       </div>
       <div class="inside-income-info-box">
         <span class="main-page-content-name">Expenses</span>
-        <span id="getExpense">Nil</span>
+        <span id="getExpense">Nil
+          <!-- expense needs to update here-->
+        </span>
       </div>
       <div class="inside-income-info-box">
         <span class="main-page-content-name">Balance</span>
-        <span id="getBalance">Nil</span>
+        <span id="getBalance">Nil
+          <!-- balance needs to update here-->
+        </span>
       </div>
     </div>
     <div class="expense-and-transaction-button-container">
