--- a/main.html
+++ b/main.html
@@ -53,6 +53,10 @@
     <div id="header" class="header">
       <!-- coded by using js-->
     </div>
+    <div class="calendar-container">
+      <i class="fa-solid fa-calendar calendar-icon"></i>
+      <span class="calendar-info"></span>
+    </div>
     <div class="income-related-information">
       <div class="inside-income-info-box">
         <span class="main-page-content-name">Current Month</span>
@@ -64,13 +68,14 @@
       </div>
       <div class="inside-income-info-box">
         <span class="main-page-content-name">Expenses</span>
-        <span id="getExpense">Nil
+        <span id="getExpense">
           <!-- expense needs to update here-->
         </span>
       </div>
       <div class="inside-income-info-box">
         <span class="main-page-content-name">Balance</span>
-        <span id="getBalance">Nil
+        <span id="getBalance"
+          >Nil
           <!-- balance needs to update here-->
         </span>
       </div>
@@ -87,7 +92,7 @@
         </table>
       </div>
       <div class="view-more-transaction-button-container">
-          <button class="view-more-btn">View More</button>
+        <button class="view-more-btn">View More</button>
       </div>
     </div>
     <form id="userinformation" autocomplete="off" class="add-expense-income">
